Move tip counter outside of the button; touch up styling

--- a/index.html
+++ b/index.html
@@ -2,21 +2,24 @@
 <head>
 	<meta charset="utf-8">
 	<title>JavaScript Tips Tab</title>
-	<link href="https://fonts.googleapis.com/css?family=Oxygen:400" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Karla:400" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
 <body>
 	<section class="tip">
-		<div class="tip-number">
+		<div class="title">
 			JavaScript Tip
 		</div>
 
 		<div class="js-tip"> </div>
 
 		<button class="tip-button">
-			Tips Left: <span class="tip-limit-count"> </span>
+			Next Tip &rarr;
 		</button>
+
+		<span class="tip-limit-count"> </span>
 
 	</section>
 
